Infraestructura/k8s/aws/booking-saga-worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-saga-worker
  labels:
    app: booking-saga-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: booking-saga-worker
  template:
    metadata:
      labels:
        app: booking-saga-worker
    spec:
      containers:
        - name: booking-saga-worker
          image: ${ECR_REGISTRY_DEV}/booking:${GITHUB_SHA}
          command: ["python", "/src/Booking/modulos/saga_reservas/infraestructura/consumidor_evt_saga.py"]
