Infraestructura/k8s/aws/partner-management-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: partner-management
  labels:
    app: partner-management
spec:
  replicas: 1
  selector:
    matchLabels:
      app: partner-management
  template:
    metadata:
      labels:
        app: partner-management
    spec:
      containers:
        - name: partner-management
          image: ${ECR_REGISTRY_DEV}/partner-management:${GITHUB_SHA}
          ports:
            - containerPort: 8000
          startupProbe:
            httpGet:
              path: /health
              port: 8000
            periodSeconds: 5
            failureThreshold: 24
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
