Infraestructura/k8s/aws/pms-integration-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pms-integration
  labels:
    app: pms-integration
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pms-integration
  template:
    metadata:
      labels:
        app: pms-integration
    spec:
      containers:
        - name: pms-integration
          image: ${ECR_REGISTRY_DEV}/pms-integration:${GITHUB_SHA}
          ports:
            - containerPort: 8001
          startupProbe:
            httpGet:
              path: /health
              port: 8001
            periodSeconds: 5
            failureThreshold: 24
          readinessProbe:
            httpGet:
              path: /health
              port: 8001
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 8001
            initialDelaySeconds: 10
            periodSeconds: 10
