Infraestructura/k8s/aws/rabbitmq-broker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-broker
  labels:
    app: rabbitmq-broker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq-broker
  template:
    metadata:
      labels:
        app: rabbitmq-broker
    spec:
      containers:
        - name: rabbitmq-broker
          image: rabbitmq:3.13-management-alpine
          ports:
            - containerPort: 5672
            - containerPort: 15672
          readinessProbe:
            exec:
              command:
                - rabbitmq-diagnostics
                - -q
                - ping
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            exec:
              command:
                - rabbitmq-diagnostics
                - -q
                - ping
            initialDelaySeconds: 20
            periodSeconds: 20
