Infraestructura/k8s/aws/authservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authservice
spec:
  type: ClusterIP
  selector:
    app: authservice
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
