Infraestructura/k8s/aws/booking-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: booking
spec:
  type: LoadBalancer
  selector:
    app: booking
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
