Infraestructura/k8s/aws/notification-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-service
spec:
  type: ClusterIP
  selector:
    app: notification
  ports:
    - port: 80
      targetPort: 80
