Infraestructura/k8s/aws/partner-management-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: partner-management
spec:
  type: ClusterIP
  selector:
    app: partner-management
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
