Infraestructura/k8s/aws/partnermanagement-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: partnermanagement-service
spec:
  type: ClusterIP
  selector:
    app: partnermanagement
  ports:
    - port: 80
      targetPort: 80
