Infraestructura/k8s/aws/pms-integration-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pms-integration
spec:
  type: ClusterIP
  selector:
    app: pms-integration
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8001
