Infraestructura/k8s/aws/redis-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-db
spec:
  type: ClusterIP
  selector:
    app: redis-db
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
