Infraestructura/k8s/aws/search-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: search
spec:
  type: LoadBalancer
  selector:
    app: search
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
