Infraestructura/k8s/aws/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: travelhub-backend-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /booking(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: booking
            port:
              number: 80

      - path: /notification(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: notification
            port:
              number: 80

      - path: /payment(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: payment
            port:
              number: 80

      - path: /pmsintegration(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: pms-integration
            port:
              number: 80

      - path: /partner(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: partner-management
            port:
              number: 80

      - path: /search(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: search
            port:
              number: 80


      - path: /catalog(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: catalog
            port:
              number: 80
